--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <p class="odds">Number 1 - I'm a class!</p>
-    <div id="theID">Number 2 - I'm one ID.</div>
-    <p class="odds but-cooler">Number 3 - I'm a class, but cooler!</p>
+    <div id="theSecond">Number 2 - I'm one ID.</div>
+    <p class="odds butCooler">Number 3 - I'm a class, but cooler!</p>
     <div id="theFourth">Number 4 - I'm another ID.</div>
     <p class="odds">Number 5 - I'm a class!</p>
   </body>
